Utworzono za pomocą Colab

--- a/even-easier-cuda/An_Even_Easier_Introduction_to_CUDA.ipynb
+++ b/even-easier-cuda/An_Even_Easier_Introduction_to_CUDA.ipynb
@@ -96,7 +96,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nc-gBqLDQ7AC"
+        "id": "nc-gBqLDQ7AC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0157ddc1-5cf8-4c15-ec09-c103c305403b"
       },
       "source": [
         "%%writefile add.cpp\n",
@@ -140,8 +144,16 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting add.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,14 +169,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gNpH54M_RbAU"
+        "id": "gNpH54M_RbAU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cf3b5ddd-ab9d-44ec-d71a-fe51f3e108e5"
       },
       "source": [
         "%%shell\n",
         "g++ add.cpp -o add"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -178,14 +203,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QmA4ACe5RuiU"
+        "id": "QmA4ACe5RuiU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5fcb0ba3-33f1-41ee-8f20-e9c218d16a5d"
       },
       "source": [
         "%%shell\n",
         "./add"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Max error: 0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -300,7 +345,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K8bYDM7kYT7S"
+        "id": "K8bYDM7kYT7S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10757f52-1227-44a1-e0c8-34842429f969"
       },
       "source": [
         "%%writefile add.cu\n",
@@ -350,13 +399,25 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing add.cu\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TjLGGp0oYeEc"
+        "id": "TjLGGp0oYeEc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a3648f8-a37d-477b-9fe3-4934ad15e987"
       },
       "source": [
         "%%shell\n",
@@ -364,8 +425,24 @@
         "nvcc add.cu -o add_cuda\n",
         "./add_cuda"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Max error: 1\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -397,15 +474,55 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gtfQLWwYZpfV"
+        "id": "gtfQLWwYZpfV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d37d51dc-dd2f-4dd0-e4ff-c0f156e31866"
       },
       "source": [
         "%%shell\n",
         "\n",
         "nvprof ./add_cuda"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==10498== NVPROF is profiling process 10498, command: ./add_cuda\n",
+            "Max error: 1\n",
+            "==10498== Profiling application: ./add_cuda\n",
+            "==10498== Profiling result:\n",
+            "No kernels were profiled.\n",
+            "            Type  Time(%)      Time     Calls       Avg       Min       Max  Name\n",
+            "      API calls:   93.06%  114.46ms         2  57.231ms  68.118us  114.39ms  cudaMallocManaged\n",
+            "                    6.48%  7.9643ms         1  7.9643ms  7.9643ms  7.9643ms  cudaLaunchKernel\n",
+            "                    0.27%  330.29us         2  165.15us  136.29us  194.01us  cudaFree\n",
+            "                    0.14%  167.29us       114  1.4670us     197ns  64.417us  cuDeviceGetAttribute\n",
+            "                    0.04%  47.287us         1  47.287us  47.287us  47.287us  cuDeviceGetPCIBusId\n",
+            "                    0.01%  12.268us         1  12.268us  12.268us  12.268us  cuDeviceGetName\n",
+            "                    0.01%  12.027us         1  12.027us  12.027us  12.027us  cudaDeviceSynchronize\n",
+            "                    0.00%  1.6930us         3     564ns     233ns  1.2190us  cuDeviceGetCount\n",
+            "                    0.00%     847ns         2     423ns     216ns     631ns  cuDeviceGet\n",
+            "                    0.00%     675ns         1     675ns     675ns     675ns  cuDeviceTotalMem\n",
+            "                    0.00%     521ns         1     521ns     521ns     521ns  cuModuleGetLoadingMode\n",
+            "                    0.00%     273ns         1     273ns     273ns     273ns  cuDeviceGetUuid\n",
+            "\n",
+            "==10498== Unified Memory profiling result:\n",
+            "Total CPU Page faults: 24\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -419,15 +536,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TrYmwVZfaPqz"
+        "id": "TrYmwVZfaPqz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "26ab8708-2bbb-457c-b6a9-d9abd3326a18"
       },
       "source": [
         "%%shell\n",
         "\n",
         "nvidia-smi"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sat Aug 16 15:12:53 2025       \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
+            "|-----------------------------------------+------------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                        |               MIG M. |\n",
+            "|=========================================+========================+======================|\n",
+            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   42C    P0             25W /   70W |       0MiB /  15360MiB |      4%      Default |\n",
+            "|                                         |                        |                  N/A |\n",
+            "+-----------------------------------------+------------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                              |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+            "|        ID   ID                                                               Usage      |\n",
+            "|=========================================================================================|\n",
+            "|  No running processes found                                                             |\n",
+            "+-----------------------------------------------------------------------------------------+\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -508,7 +664,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "goCKY9QNbPZ-"
+        "id": "goCKY9QNbPZ-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7d5e670-06b8-48e9-ce3b-95ab1c28d3c7"
       },
       "source": [
         "%%writefile add_block.cu\n",
@@ -560,13 +720,25 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting add_block.cu\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l9cmfbcVbYgD"
+        "id": "l9cmfbcVbYgD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "009f6b42-9e1e-4370-97b6-d9c064018d47"
       },
       "source": [
         "%%shell\n",
@@ -574,8 +746,44 @@
         "nvcc add_block.cu -o add_block\n",
         "nvprof ./add_block"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==10555== NVPROF is profiling process 10555, command: ./add_block\n",
+            "Max error: 1\n",
+            "==10555== Profiling application: ./add_block\n",
+            "==10555== Profiling result:\n",
+            "No kernels were profiled.\n",
+            "            Type  Time(%)      Time     Calls       Avg       Min       Max  Name\n",
+            "      API calls:   92.39%  103.37ms         2  51.684ms  50.377us  103.32ms  cudaMallocManaged\n",
+            "                    7.20%  8.0546ms         1  8.0546ms  8.0546ms  8.0546ms  cudaLaunchKernel\n",
+            "                    0.27%  302.07us         2  151.04us  116.16us  185.92us  cudaFree\n",
+            "                    0.11%  123.54us       114  1.0830us     106ns  49.469us  cuDeviceGetAttribute\n",
+            "                    0.01%  14.858us         1  14.858us  14.858us  14.858us  cudaDeviceSynchronize\n",
+            "                    0.01%  11.065us         1  11.065us  11.065us  11.065us  cuDeviceGetName\n",
+            "                    0.01%  5.7720us         1  5.7720us  5.7720us  5.7720us  cuDeviceGetPCIBusId\n",
+            "                    0.00%  1.6880us         3     562ns     135ns  1.3320us  cuDeviceGetCount\n",
+            "                    0.00%     915ns         2     457ns     167ns     748ns  cuDeviceGet\n",
+            "                    0.00%     424ns         1     424ns     424ns     424ns  cuModuleGetLoadingMode\n",
+            "                    0.00%     369ns         1     369ns     369ns     369ns  cuDeviceTotalMem\n",
+            "                    0.00%     196ns         1     196ns     196ns     196ns  cuDeviceGetUuid\n",
+            "\n",
+            "==10555== Unified Memory profiling result:\n",
+            "Total CPU Page faults: 24\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -669,7 +877,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a7w-DHBRdhUC"
+        "id": "a7w-DHBRdhUC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "373214e6-1350-4732-e871-037a9e713e3a"
       },
       "source": [
         "%%writefile add_grid.cu\n",
@@ -723,13 +935,25 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting add_grid.cu\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FhcrktW9dw34"
+        "id": "FhcrktW9dw34",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0816b00b-b177-49df-85c8-0f6034288075"
       },
       "source": [
         "%%shell\n",
@@ -737,8 +961,44 @@
         "nvcc add_grid.cu -o add_grid\n",
         "nvprof ./add_grid"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "==10613== NVPROF is profiling process 10613, command: ./add_grid\n",
+            "Max error: 1\n",
+            "==10613== Profiling application: ./add_grid\n",
+            "==10613== Profiling result:\n",
+            "No kernels were profiled.\n",
+            "            Type  Time(%)      Time     Calls       Avg       Min       Max  Name\n",
+            "      API calls:   93.18%  112.39ms         2  56.197ms  53.587us  112.34ms  cudaMallocManaged\n",
+            "                    6.47%  7.7999ms         1  7.7999ms  7.7999ms  7.7999ms  cudaLaunchKernel\n",
+            "                    0.23%  271.59us         2  135.79us  121.37us  150.21us  cudaFree\n",
+            "                    0.10%  124.41us       114  1.0910us     103ns  50.555us  cuDeviceGetAttribute\n",
+            "                    0.01%  11.752us         1  11.752us  11.752us  11.752us  cuDeviceGetName\n",
+            "                    0.01%  10.431us         1  10.431us  10.431us  10.431us  cudaDeviceSynchronize\n",
+            "                    0.00%  4.7550us         1  4.7550us  4.7550us  4.7550us  cuDeviceGetPCIBusId\n",
+            "                    0.00%  1.8440us         3     614ns     140ns  1.3670us  cuDeviceGetCount\n",
+            "                    0.00%     779ns         2     389ns     268ns     511ns  cuDeviceGet\n",
+            "                    0.00%     500ns         1     500ns     500ns     500ns  cuModuleGetLoadingMode\n",
+            "                    0.00%     412ns         1     412ns     412ns     412ns  cuDeviceTotalMem\n",
+            "                    0.00%     260ns         1     260ns     260ns     260ns  cuDeviceGetUuid\n",
+            "\n",
+            "==10613== Unified Memory profiling result:\n",
+            "Total CPU Page faults: 24\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
